--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -48,11 +48,11 @@
       </div>
 
       <div class="home-sci">
-        <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100091064822677"><i class="bx bxl-facebook-circle"></i></a>
         <a href="@Hami_Dar_boss"><i class="bx bxl-telegram"></i></a>
         <a href="https://github.com/Habtamuzenebe"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="zenebehabtamu78@gmail.com"><i class="bx bxl-gmail"></i></a>
+        <a href="https://www.instagram.com/habtamu_2127/"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="habtamuzenebe42@gmail.com"><i class="bx bxl-gmail"></i></a>
       </div>
       <span class="home-imagehover"></span>
     </section>
