--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
   </head>
 
-  <body>
+  <!-- <body> -->
     <!-- header design -->
     <header class="header">
       <a href="#" class="logo"> Habtamu Zenebe<span class="animate" style="--i:1;"></span></a>
